# antigravity_automation

./: CNAME  README.md  index.html  package-lock.json  swagger.json  swagger.yaml
api/: index.html  swagger.json
code_samples/csharp/: AntigravityApi.cs
code_samples/curl/: antigravity_api.sh
code_samples/go/: antigravity_automation_api_examples.go
code_samples/javascript/: antigravity_automation_api_examples.js
code_samples/php/: antigravity_automation_api_examples.php
code_samples/python/: antigravity_api.py
code_samples/ruby/: antigravity_api.rb
code_samples/rust/src/: antigravity_automation_api_examples.rs
docs/: swagger.yaml
libraries/npm_package/: README.md  package-lock.json
libraries/npm_package/src/: client.ts  index.ts  stream.ts
libraries/npm_package/test/: test.js  test_live.js
libraries/python_package/src/antigravity_automation/: __init__.py  client.py  types.py
libraries/python_package/tests/: test_import.py
sdks/npm/: LICENSE  README.md  package.json  tsconfig.json
sdks/npm/src/: types.ts
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/src/antigravity_automation/: __init__.py  stream.py
sdks/python/tests/: test_live.py
src/css/: styles.css
src/js/: app.js
src/js/views/: CodeExamplesView.js  HomeView.js  InstallView.js  SdksView.js
